Arreglo de bug menu de hamburguesa

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a class="navbar-brand" href="#">
                     <img src="assets/images/logo.png" alt="Logo"> Naoko
                 </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNaoko" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
